Fixed contact wrap

--- a/css/main_style.css
+++ b/css/main_style.css
@@ -6,7 +6,7 @@
 	margin-top:0px;
 	padding:10px 20px 0px;
 	text-align:right;
-	width:920px;
+	width:930px;
 }
 
  #wsite-university { margin-top:0px; padding:10px 20px 0px; text-align:right; }
